[Auth-feature] add login endpoint
